# redbot-update-wrapper

./: .gitignore  hatch_build.py  pyproject.toml
.github/workflows/: build.yaml  type_check.yaml
go/cmd/redbot-update/: main.go  runner.go
go/internal/logutils/: logutils.go
go/internal/osutils/: osutils.go  osutils_unix.go  osutils_windows.go
go/internal/virtualenv/: virtualenv.go
